assets/css/style.css
/* ... */
@media screen and (max-width: 1200px) {
  .footer .wrapper .navbar-nav {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 0;
  }
}
.footer .wrapper .nav-socials {
  display: flex;
  align-items: center;
  gap: 25px;
}
.footer .wrapper .nav-socials a {
  text-decoration: none;
}
@media screen and (max-width: 1060px) {
  .footer .wrapper .nav-socials {
    gap: 10px;
  }
}
@media screen and (max-width: 990px) {
  .footer .wrapper .nav-socials {
    padding: 20px 0 20px 10px;
  }
}

.to_trains {
  text-align: center;
  padding: 30px 10px;
  height: 100vh;
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/meyersMens.png") center;
  background-size: cover;
}
@media screen and (max-width: 650px) {
  .to_trains {
    height: auto;
    padding: 50px 10px;
  }
}
.to_trains h1 {
  font-family: "Algerian TYGRA";
  font-size: 38px;
  text-align: center;
}
.to_trains p {
  font-size: 15px;
  color: #9A9A9A;
}
.to_trains .socials {
  display: flex;
  flex-direction: column;
  gap: 20px;
  align-items: center;
  max-width: 362px;
  width: 100%;
}
.to_trains .socials a {
  width: 100%;
  height: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  color: #ffffff;
  gap: 20px;
  background-color: rgba(40, 40, 40, 0.3);
  border-radius: 50px;
  box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.2509803922);
}
.to_trains .socials a:hover {
  background-color: rgba(40, 40, 40, 0.6);
  font-size: 18px;
  transition: 0.1s linear;
}
.to_trains .address {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
  max-width: 450px;
  text-align: center;
  font-family: "Centure Gothic";
  font-size: 20px;
  color: #9A9A9A;
  line-height: 24px;
}
.to_trains .address p {
  font-size: 20px;
}
.to_trains .address b {
  font-family: "Centure Gothic Bold";
}
.to_trains .address a {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 16px;
  text-decoration: none;
  color: #9A9A9A;
}

.divider {
  width: 46px;
  height: 3px;
  background: white;
}

.mb-30 {
  margin-bottom: 30px;
}

.mb-50 {
  margin-bottom: 50px;
}

.mb-70 {
  margin-bottom: 70px;
}
@media screen and (max-width: 1200px) {
  .mb-70 {
    margin-bottom: 30px;
  }
}

td {
  background-color: rgba(40, 40, 40, 0.3);
}

td.sword {
  background: rgba(12, 86, 19, 0.1);
}

td.saber {
  background: rgba(12, 33, 86, 0.1);
}

td.rapier {
  background: rgba(94, 29, 96, 0.1);
}

td.buckler {
  background: rgba(86, 65, 12, 0.1);
}

.button_link {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  height: 50px;
  max-width: 390px;
  padding: 0 50px;
  box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.2509803922);
  border-radius: 50px;
  font-family: "Algerian TYGRA";
  background-color: white;
  color: black;
  font-size: 20px;
  text-decoration: none;
  border: none;
}
.button_link:hover {
  background: #B78A66;
  transition: background-color 0.2s linear;
}
@media screen and (max-width: 600px) {
  .button_link {
    padding: 0 25px;
  }
}
@media screen and (max-width: 400px) {
  .button_link {
    font-size: 15px;
  }
}

.controls-wrapper {
  width: 100%;
  position: relative;
}
.controls-wrapper .controls {
  top: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 2;
  pointer-events: none;
  padding: 0 10px;
  display: none;
}
@media screen and (max-width: 1000px) {
  .controls-wrapper .controls {
    display: flex;
  }
}
.controls-wrapper .controls .prevArrow, .controls-wrapper .controls .nextArrow {
  pointer-events: auto;
}

.prevArrow, .nextArrow {
  width: 40px;
  height: 40px;
}

.prevArrow:hover, .nextArrow:hover {
  cursor: pointer;
  color: white;
}

.main-page .promo {
  min-height: 800px;
}
@media screen and (max-width: 1200px) {
  .main-page .promo {
    height: auto;
    min-height: auto;
  }
}
.main-page .promo .promo-top {
  background: url("../img/banner.jpg") center;
  background-size: cover;
  padding-top: 75px;
  height: 570px;
}
@media screen and (max-width: 600px) {
  .main-page .promo .promo-top {
    max-height: 500px;
    height: 100%;
  }
}
.main-page .promo .logo-text {
  max-width: 874px;
  height: 148px;
  margin-bottom: 45px;
}
@media screen and (max-width: 900px) {
  .main-page .promo .logo-text {
    max-width: 80%;
    height: auto;
  }
}
.main-page .what {
  padding-top: 30px;
  padding-bottom: 50px;
  line-height: 26px;
}
@media screen and (max-width: 1200px) {
  .main-page .what {
    height: 100%;
    padding-top: 20px;
    padding-bottom: 30px;
  }
}
.main-page .what p {
  margin: 0;
}
.main-page .what .row {
  gap: 22px;
  height: 600px;
  flex-wrap: nowrap;
}
@media screen and (max-width: 990px) {
  .main-page .what .row {
    flex-direction: column;
    flex-wrap: wrap;
    height: 100%;
  }
}
.main-page .what .row .left, .main-page .what .row .right {
  display: flex;
  border-radius: 10px;
  height: 100%;
  max-height: 850px;
  box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.2509803922);
}
.main-page .what .row .left {
  background-image: url("../img/background.jpg");
  filter: brightness(1.5);
  color: #9A9A9A;
  font-family: "Centure Gothic";
  font-size: 20px;
  padding: 40px;
  text-align: center;
  background-image: url("../img/meyersMens.png");
  background-size: 100% 50%;
  background-repeat: no-repeat;
  background-position: bottom;
}
@media screen and (max-width: 990px) {
  .main-page .what .row .left {
    background-image: none;
  }
}
.main-page .what .row .left p {
  color: #9A9A9A;
}
@media screen and (max-width: 1400px) {
  .main-page .what .row .left {
    padding: 20px;
  }
}
.main-page .what .row .right {
  background-position: top;
  background-size: cover;
  border-radius: 12px;
}
@media screen and (max-width: 990px) {
  .main-page .what .row .right {
    height: 400px;
  }
}
.main-page .what .promo-text p {
  margin-bottom: 50px;
}
/* ... */

